| Summary: | ASTERISK-29871: res_prometheus: Failure to load causes FRACKs | ||
| Reporter: | Mark Petersen (asterisk.org@zombie.dk) | Labels: | |
| Date Opened: | 2022-01-21 05:51:50.000-0600 | Date Closed: | 2022-02-11 11:51:01.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/General |
| Versions: | 18.9.0 19.1.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Centos8 | Attachments: | |
| Description: | if I enable res_prometheus.so im modules.conf I get this error when I try to start asterisk
asterisk 18.9.0 {noformat} [2022-01-21 12:33:00.679] Loading res_prometheus.so. [2022-01-21 12:33:00.681] Loading res_hep_pjsip.so. [2022-01-21 12:33:00.681] == res_hep_pjsip.so => (PJSIP HEPv3 Logger) [2022-01-21 12:33:00.681] Loading res_manager_presencestate.so. [2022-01-21 12:33:00.680] ERROR[208188]: stasis_message_router.c:160 find_route: FRACK!, Failed assertion bad magic number 0x0 for object 0x179bca0 (0) [2022-01-21 12:33:00.681] == Manager registered action PresenceStateList [2022-01-21 12:33:00.681] == res_manager_presencestate.so => (Manager Presence State Topic Forwarder) [2022-01-21 12:33:00.681] Loading res_manager_devicestate.so. [2022-01-21 12:33:00.681] == Manager registered action DeviceStateList [2022-01-21 12:33:00.681] == res_manager_devicestate.so => (Manager Device State Topic Forwarder) [2022-01-21 12:33:00.681] WARNING[171886]: loader.c:2393 load_modules: Some non-required modules failed to load. [2022-01-21 12:33:00.710] ERROR[171886]: loader.c:2508 load_modules: res_prometheus declined to load. [2022-01-21 12:33:00.711] Asterisk Ready. [2022-01-21 12:33:00.750] ERROR[208188]: Got 12 backtrace records # 0: [0x5dacf4] asterisk utils.c:2727 __ast_assert_failed() # 1: [0x462548] asterisk astobj2.c:220 log_bad_ao2() # 2: [0x4625ae] asterisk astobj2.c:224 __ao2_lock() # 3: [0x5b0eb7] asterisk stasis_message_router.c:160 find_route() # 4: [0x5b0fba] asterisk stasis_message_router.c:196 router_dispatch() # 5: [0x59bf12] asterisk stasis.c:786 subscription_invoke() # 6: [0x59d197] asterisk stasis.c:1266 dispatch_exec_async() # 7: [0x5c5095] asterisk taskprocessor.c:1235 ast_taskprocessor_execute() # 8: [0x5c21ec] asterisk taskprocessor.c:201 default_tps_processing_function() # 9: [0x5d8048] asterisk utils.c:1572 dummy_start() #10: [0x7f0dfd05f17a] libpthread.so.0 :0 __libpthread_freeres() #11: [0x7f0dfc5aadc3] libc.so.6 :0 clone() {noformat} asterisk 19.1.0 {noformat} [2022-01-21 12:48:50.091] Loading res_prometheus.so. [2022-01-21 12:48:50.092] Loading res_hep_pjsip.so. [2022-01-21 12:48:50.092] == res_hep_pjsip.so => (PJSIP HEPv3 Logger) [2022-01-21 12:48:50.092] Loading res_manager_presencestate.so. [2022-01-21 12:48:50.092] ERROR[245856]: stasis_message_router.c:160 find_route: FRACK!, Failed assertion bad magic number 0x0 for object 0x2a61e80 (0) [2022-01-21 12:48:50.093] == Manager registered action PresenceStateList [2022-01-21 12:48:50.093] == res_manager_presencestate.so => (Manager Presence State Topic Forwarder) [2022-01-21 12:48:50.093] Loading res_manager_devicestate.so. [2022-01-21 12:48:50.093] == Manager registered action DeviceStateList [2022-01-21 12:48:50.093] == res_manager_devicestate.so => (Manager Device State Topic Forwarder) [2022-01-21 12:48:50.093] WARNING[245809]: loader.c:2393 load_modules: Some non-required modules failed to load. [2022-01-21 12:48:50.121] ERROR[245809]: loader.c:2508 load_modules: res_prometheus declined to load. [2022-01-21 12:48:50.122] Asterisk Ready. [2022-01-21 12:48:50.160] ERROR[245856]: Got 12 backtrace records # 0: [0x5da9ed] asterisk utils.c:2727 __ast_assert_failed() # 1: [0x462518] asterisk astobj2.c:220 log_bad_ao2() # 2: [0x46257e] asterisk astobj2.c:224 __ao2_lock() # 3: [0x5b0bb0] asterisk stasis_message_router.c:160 find_route() # 4: [0x5b0cb3] asterisk stasis_message_router.c:196 router_dispatch() # 5: [0x59bc0b] asterisk stasis.c:786 subscription_invoke() # 6: [0x59ce90] asterisk stasis.c:1266 dispatch_exec_async() # 7: [0x5c4d8e] asterisk taskprocessor.c:1235 ast_taskprocessor_execute() # 8: [0x5c1ee5] asterisk taskprocessor.c:201 default_tps_processing_function() # 9: [0x5d7d41] asterisk utils.c:1572 dummy_start() #10: [0x7f39aa94a17a] libpthread.so.0 :0 __libpthread_freeres() #11: [0x7f39a9e95dc3] libc.so.6 :0 clone() [2022-01-21 12:48:50.160] ERROR[245856]: stasis_message_router.c:160 _dtor_lock: FRACK!, Failed assertion bad magic number 0x7473206 for object 0x2a61e80 (0) [2022-01-21 12:48:50.208] ERROR[245856]: Got 13 backtrace records # 0: [0x5da9ed] asterisk utils.c:2727 __ast_assert_failed() # 1: [0x462518] asterisk astobj2.c:220 log_bad_ao2() # 2: [0x4627a3] asterisk astobj2.c:290 __ao2_unlock() # 3: [0x5b0b51] asterisk stasis_message_router.c:160 _dtor_lock() # 4: [0x5b0c77] asterisk stasis_message_router.c:160 find_route() # 5: [0x5b0cb3] asterisk stasis_message_router.c:196 router_dispatch() # 6: [0x59bc0b] asterisk stasis.c:786 subscription_invoke() # 7: [0x59ce90] asterisk stasis.c:1266 dispatch_exec_async() # 8: [0x5c4d8e] asterisk taskprocessor.c:1235 ast_taskprocessor_execute() # 9: [0x5c1ee5] asterisk taskprocessor.c:201 default_tps_processing_function() #10: [0x5d7d41] asterisk utils.c:1572 dummy_start() #11: [0x7f39aa94a17a] libpthread.so.0 :0 __libpthread_freeres() #12: [0x7f39a9e95dc3] libc.so.6 :0 clone() {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-01-21 05:51:51.314-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2022-01-21 05:57:22.518-0600 I've accepted this as an issue, but res_prometheus is community supported so there is no time frame on if or when anyone would look at this. By: Mark Petersen (asterisk.org@zombie.dk) 2022-01-21 07:12:17.555-0600 found that it depends on this modules, if added to modules.conf it no longer fails load => res_pjsip_outbound_registration.so By: Friendly Automation (friendly-automation) 2022-02-11 11:51:02.263-0600 Change 17992 merged by Friendly Automation: res_prometheus.c: missing module dependency [https://gerrit.asterisk.org/c/asterisk/+/17992|https://gerrit.asterisk.org/c/asterisk/+/17992] By: Friendly Automation (friendly-automation) 2022-02-11 11:51:08.410-0600 Change 17993 merged by Friendly Automation: res_prometheus.c: missing module dependency [https://gerrit.asterisk.org/c/asterisk/+/17993|https://gerrit.asterisk.org/c/asterisk/+/17993] By: Friendly Automation (friendly-automation) 2022-02-11 11:52:15.644-0600 Change 17913 merged by Friendly Automation: res_prometheus.c: missing module dependency [https://gerrit.asterisk.org/c/asterisk/+/17913|https://gerrit.asterisk.org/c/asterisk/+/17913] | ||