res/res_prometheus.c
@@ -27,6 +27,7 @@
 /*** MODULEINFO
 	<use>pjproject</use>
 	<use type="module">res_pjsip</use>
+	<use type="module">res_pjsip_outbound_registration</use>
 	<support_level>extended</support_level>
  ***/
 
@@ -1002,6 +1003,7 @@ AST_MODULE_INFO(ASTERISK_GPL_KEY, AST_MODFLAG_GLOBAL_SYMBOLS | AST_MODFLAG_LOAD_
 	.reload = reload_module,
 	.load_pri = AST_MODPRI_DEFAULT,
 #ifdef HAVE_PJPROJECT
-	.requires = "res_pjsip",
+	/* This module explicitly calls into res_pjsip if Asterisk is built with PJSIP support, so they are required. */
+	.requires = "res_pjsip,res_pjsip_outbound_registration",
 #endif
 );
